@@ -1,3 +1,9 @@
+2008-05-17  Arno Rehn  <arno@arnorehn.de>
+
+	* Don't build kimono because the classes won't compile.
+	* Fixed resolve_classname.
+	* Changed 'modules' to 'qyoto_modules' in QScintillaSharp, too.
+
 2008-05-16  Richard Dale  <richard.j.dale@gmail.com>
 
 	* After the modular smoke changes, the QtWebKit classes were not being
